# TruthNuke

./: .env  .gitignore  LICENSE  README.md  claim_extractor.py  content.js  index.html  main.py  manifest.json  market_data.py  our_Vision.md  package-extension.sh  platforms.js  popup.css  popup.html  popup.js  requirements.txt  scorer.py  start-backend.sh  styles.css
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  analyzer.py  claim_extractor.py  classifier.py  explanation_engine.py  llm_client.py  mock_search_provider.py  rag_pipeline.py  risk_scorer.py  search_provider.py  trust_score_engine.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/property/: __init__.py  test_api_props.py  test_claim_props.py  test_classifier_props.py  test_example_property.py  test_mock_search_props.py  test_normalization_props.py  test_rag_pipeline_props.py  test_trust_score_engine_props.py  test_trust_score_props.py
backend/tests/unit/: __init__.py  test_analyzer.py  test_api_routes.py  test_claim_extractor.py  test_classifier.py  test_config.py  test_example.py  test_explanation_engine.py  test_llm_client.py  test_rag_pipeline.py  test_trust_score_engine.py
extension/: background.js  content.js  generate_icons.html  manifest.json  platforms.js  popup.css  popup.html  popup.js  styles.css
frontend/: .env.example  jest.config.js  jest.setup.js  (+2 more)
(+23 files in other folders)
